Reviewed: eclipse.platform